Pre-release fixes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "www.seage.org",
+  "name": "SEAGE.org webpage",
   "icons": [
     {
       "src": "favicon.ico",
