--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-deploy",
+  "name": "www.seage.org",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://seage.github.io/web2",
+  "homepage": "https://seage.github.io",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
